[package]
name = "opendotgit"
authors = ["Himadri Bhattacharjee <lavafroth@protonmail.com>"]
description = "Dump git repository from open .git directories"
version = "0.4.2"
license = "GPL-3.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.4.1", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.28"
git2 = "0.18.0"
hex = "0.4.3"
hyper = {version = "0.14.27", features = ["full"]}
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.20"
pathbuf = "0.3.1"
regex = "1.9.4"
soup = "0.5.1"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3.0"
url = "2.4.1"
url_path = "0.1.3"
walkdir = "2.3.3"

[dependencies.simple_logger]
version = "4.2.0"
default-features = false
features = ["colors"]
