[package]
name = "opendotgit"
authors = ["Himadri Bhattacharjee <lavafroth@protonmail.com>"]
description = "Dump git repository from open .git directories"
version = "0.4.3"
license = "GPL-3.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.30"
git2 = "0.18.2"
hex = "0.4.3"
hyper-tls = "0.6.0"
lazy_static = "1.4.0"
log = "0.4.20"
pathbuf = "1.0.0"
regex = "1.10.3"
reqwest = "0.11.24"
soup = "0.5.1"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3.0"
url = "2.5.0"
url_path = "0.1.3"
walkdir = "2.5.0"

[dependencies.simple_logger]
version = "4.3.3"
default-features = false
features = ["colors"]
